fix: table resize trigger scrollbar

--- a/components/table/style/resize.less
+++ b/components/table/style/resize.less
@@ -24,6 +24,7 @@
 }
 
 .@{table-prefix-cls}-resize-handle.dragging {
+  overflow: hidden;
   .@{table-prefix-cls}-resize-handle-line {
     opacity: 1;
   }
